welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  if (10<=a && a<=20)
  {if (10<=b && b<=20)
   {return Math.max(a,b)}
  }
  if (20<a && b<10) {return 0};
  if (20<a && 20<b) {return 0};
  if (20<b && a<10) {return 0};   
	if (20<b && 20<a) {return 0};
}